# Flyboard-Proyect

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/clients/: openai_client.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/schemas/: __init__.py  agent.py  tools.py
app/services/: __init__.py  agent.py  kb.py  storage.py  tool_router.py
app/tools/: definitions.py
app/utils/: ids.py  time.py
data/: kb.json
tests/: test_agent_orchestration.py  test_api_validation.py  test_kb.py  test_openai_timeout.py  test_storage_defensive_validation.py  test_tool_validation.py
